# Principal-Component-Analysis

./: Instructions.txt
excercise1/geometry/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
excercise1/geometry/cmake/Modules/: FindGTest.cmake
excercise1/geometry/include/ar_geometry/: box.h  capsule.h  geometry.h  mesh.h  sphere.h
excercise1/geometry/src/: box.cpp  capsule.cpp  mesh.cpp  sphere.cpp
excercise1/geometry/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_geometries.cpp
exercise2/: CMakeCache.txt  CMakeLists.txt  Documentation.docx  Makefile  Readme.md  cmake_install.cmake  exercise2.cpp
